force-app/main/default/objects/Document_Intake_Job__c/Document_Intake_Job__c.object-meta.xml
<CustomObject>
    <description>Submission-level audit record for portal document intake requests. Tracks idempotency, status, and the uploaded Salesforce Files accepted for async document splitting and review.</description>
    <label>Document Intake Job</label>
    <nameField>
        <displayFormat>DIJ-{00000000}</displayFormat>
        <label>Document Intake Job Name</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Intake Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>