force-app/main/default/objects/Document_Intake_Job__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Application that received this portal document submission.</description>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Application associated with the portal upload. Intake processing attaches split/reviewed documents back to this application.</inlineHelpText>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Document Intake Jobs</relationshipLabel>
    <relationshipName>Document_Intake_Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>