force-app/main/default/objects/Document_Intake_Job__c/fields/Client_Submission_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Submission_Id__c</fullName>
    <description>Portal-generated idempotency key for this document submission.</description>
    <inlineHelpText>Stable submission identifier supplied by the portal. Retrying the same value returns the existing intake job when the payload matches.</inlineHelpText>
    <label>Client Submission Id</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>