force-app/main/default/objects/Document_Intake_Job__c/fields/Client_Submission_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Submission_Key__c</fullName>
    <description>Unique application-and-submission key used by the intake REST API for idempotency.</description>
    <externalId>true</externalId>
    <inlineHelpText>Generated as Application Id plus client submission id. The REST API uses this field to prevent duplicate intake jobs on retry.</inlineHelpText>
    <label>Client Submission Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>