force-app/main/default/objects/Document_Intake_Job__c/fields/Completed_Files__c.field-meta.xml
<CustomField>
    <fullName>Completed_Files__c</fullName>
    <description>Number of intake file items that have completed processing.</description>
    <inlineHelpText>Updated by async intake processing as files complete split, mapping, and review work.</inlineHelpText>
    <label>Completed Files</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>