force-app/main/default/objects/Document_Intake_Job__c/fields/Error_Detail__c.field-meta.xml
<CustomField>
    <fullName>Error_Detail__c</fullName>
    <description>Failure details captured when intake processing cannot continue.</description>
    <inlineHelpText>Populated by async processing when the submission fails or one or more file items cannot be started.</inlineHelpText>
    <label>Error Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>