force-app/main/default/objects/Document_Intake_Job__c/fields/Library_Id__c.field-meta.xml
<CustomField>
    <fullName>Library_Id__c</fullName>
    <description>Optional ContentWorkspace Id used by the splitter service for output files.</description>
    <inlineHelpText>Optional 15- or 18-character ContentWorkspace Id. When blank, intake processing tries to infer the source file library.</inlineHelpText>
    <label>Library Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>