force-app/main/default/objects/Document_Intake_Job__c/fields/Payload_Hash__c.field-meta.xml
<CustomField>
    <fullName>Payload_Hash__c</fullName>
    <description>SHA-256 hash of the normalized intake payload used to detect conflicting retries.</description>
    <inlineHelpText>Generated by Apex from the sorted file set and request options. Same submission id with a different hash returns a conflict.</inlineHelpText>
    <label>Payload Hash</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>