force-app/main/default/objects/Document_Intake_Job__c/fields/Raw_Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>Raw_Request_JSON__c</fullName>
    <description>Sanitized JSON payload accepted by the intake REST API.</description>
    <inlineHelpText>Stores the accepted intake request without file bytes. Used for audit and troubleshooting.</inlineHelpText>
    <label>Raw Request JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>