force-app/main/default/objects/Document_Intake_Job__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Originating system that submitted the intake request.</description>
    <inlineHelpText>Indicates where the document submission came from, such as the borrower portal or another API client.</inlineHelpText>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PORTAL</fullName>
                <default>true</default>
                <label>Portal</label>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>INTERNAL</fullName>
                <label>Internal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>