force-app/main/default/objects/Document_Intake_Job__c/fields/Target_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Folder_Id__c</fullName>
    <description>Optional ContentFolder Id used by the splitter service for output files.</description>
    <inlineHelpText>Optional 15- or 18-character ContentFolder Id where split output files should be saved.</inlineHelpText>
    <label>Target Folder Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>