force-app/main/default/objects/Document_Intake_Job__c/fields/Total_Files__c.field-meta.xml
<CustomField>
    <fullName>Total_Files__c</fullName>
    <description>Number of Salesforce Files included in this intake submission.</description>
    <inlineHelpText>Count of file items accepted from the portal request.</inlineHelpText>
    <label>Total Files</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>